--- a/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
+++ b/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
                             <constraint firstItem="iiZ-nU-cSb" firstAttribute="centerY" secondItem="SRk-QZ-j2Z" secondAttribute="centerY" id="ISR-vp-chY"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="iiZ-nU-cSb" secondAttribute="bottom" id="Jcx-s1-KYi"/>
@@ -65,8 +65,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
