--- a/KnightMovesThrice/KnightMovesThrice/ViewControllers/MainScreenViewController.xib
+++ b/KnightMovesThrice/KnightMovesThrice/ViewControllers/MainScreenViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainScreenViewController" customModule="KnightMovesThrice" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="04k-3X-vKx" id="Bum-kF-5eB"/>
+                <outlet property="view" destination="iN0-l3-epB" id="Qtg-0o-z9b"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
