--- a/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
+++ b/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -34,7 +33,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="iiZ-nU-cSb" firstAttribute="centerY" secondItem="SRk-QZ-j2Z" secondAttribute="centerY" id="ISR-vp-chY"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="iiZ-nU-cSb" secondAttribute="bottom" id="Jcx-s1-KYi"/>
@@ -64,9 +63,4 @@
             <point key="canvasLocation" x="131" y="-11"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
