feat: add slider that changes the chessboard size

--- a/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
+++ b/KnightMovesThrice/KnightMovesThrice/CollectionViewCells/ChessSquareCollectionViewCell.xib
@@ -19,9 +19,9 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRk-QZ-j2Z" userLabel="Container View">
                         <rect key="frame" x="0.0" y="59" width="200" height="107"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iiZ-nU-cSb" userLabel="Marker Label">
-                                <rect key="frame" x="79.333333333333329" y="43.333333333333329" width="41.333333333333329" height="20.333333333333329"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="iiZ-nU-cSb" userLabel="Marker Label">
+                                <rect key="frame" x="80.333333333333329" y="44" width="39.666666666666671" height="19.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
